# 144hz-Mod-Geode

./: CMakeLists.txt  README.md  mod.json
.github/workfllows/: build-android64.yml  build-patched-launcher.yml
.github/workflows/: build-apk.yml  build-geode-launcher-1.8.0-144hz.yml  patched-launcher-v2.yml  patched-launcher.yml  release-shizuku.yml  verify-shizuku-release.yml
scripts/: patch-geode-launcher-144hz.py
shizuku-app/: README.md  RELEASE_MANIFEST.json  settings.gradle
shizuku-app/app/: build.gradle  proguard-rules.pro
shizuku-app/app/src/main/: AndroidManifest.xml
shizuku-app/app/src/main/aidl/com/zaid/geode144shizuku/: IGeode144Service.aidl
shizuku-app/app/src/main/java/com/zaid/geode144shizuku/: Geode144UserService.java  MainActivity.java
shizuku-app/app/src/main/res/drawable/: ic_launcher.xml  status_background.xml
shizuku-app/app/src/main/res/values/: bools.xml  colors.xml  strings.xml  styles.xml
shizuku-app/app/src/main/res/values-night/: colors.xml  styles.xml
src/: main.cpp
